--- a/index.html
+++ b/index.html
@@ -1,47 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Member Savings Statement</title>
-</head>
-<body>
-  <h1>Request Savings Statement</h1>
-  <form id="requestForm">
-    <label for="name">Member Name:</label>
-    <input type="text" id="name" name="name" required><br><br>
-    <label for="phone">Phone Number:</label>
-    <input type="text" id="phone" name="phone" required><br><br>
-    <button type="submit">Request Statement</button>
-  </form>
-
-  <div id="result"></div>
-
-  <script>
-    document.getElementById('requestForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-
-      const name = document.getElementById('name').value;
-      const phone = document.getElementById('phone').value;
-
-      fetch('http://localhost:3000/pay', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({ phone: phone, amount: 20, account: name })
-      })
-      .then(response => response.json())
-      .then(data => {
-        if (data.ResponseCode === '0') {
-          fetch(`https://script.google.com/macros/s/AKfycby9gUrCMteOQkTG-3eJmpRSTaMOi6D7sWLJ8rNVzqQEnO1EKcBTwElhK3vkyruVrR5M/exec?name=${name}&transactionId=${data.CheckoutRequestID}`)
-            .then(response => response.json())
-            .then(result => {
-              document.getElementById('result').innerText = JSON.stringify(result, null, 2);
-            });
-        } else {
-          document.getElementById('result').innerText = 'Payment failed, please try again.';
-        }
-      });
-    });
-  </script>
-</body>
+  <head>
+    <title>Member Savings</title>
+    <script>
+      async function getMemberData() {
+        const memberName = document.getElementById('memberName').value;
+        const response = await fetch('http://localhost:3000/getMemberData', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({ memberName: memberName }),
+        });
+        const data = await response.json();
+        document.getElementById('output').textContent = JSON.stringify(data, null, 2);
+      }
+    </script>
+  </head>
+  <body>
+    <h1>Member Savings</h1>
+    <input type="text" id="memberName" placeholder="Enter member name">
+    <button onclick="getMemberData()">Get Data</button>
+    <pre id="output"></pre>
+  </body>
 </html>
